--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <div id="board">
-      <div class="panel">0</div>
+      <!-- <div class="panel">0</div>
       <div class="panel">1</div>
       <div class="panel">2</div>
       <div class="panel">3</div>
@@ -16,8 +16,9 @@
       <div class="panel">5</div>
       <div class="panel">6</div>
       <div class="panel">7</div>
-      <div class="panel">8</div>
+      <div class="panel">8</div> -->
     </div>
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
