--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="panel">7</div>
       <div class="panel">8</div> -->
     </div>
+    <div id="btn">START</div>
   </div>
   <script src="main.js"></script>
 </body>
