--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="container">
+    <div id="score">0.0</div>
     <div id="board">
       <!-- <div class="panel">0</div>
       <div class="panel">1</div>
